k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    http:
      paths:
        - path: /api/users/?(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 3000
